90.Addons/03.dashboard/kubernetes-dashboard/v7.12.0/expose/ingress-nginx/ing_dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kubernetes-dashboard
  name: kubernetes-dashboard
  labels:
    ing: kubernetes-dashboard
  annotations:
    # <== 当kubernetes版本小于1.19时,
    #     可用此方法和spec.ingressClassName两种方法来指定ingressclass资源对象
    #kubernetes.io/ingress.class: "nginx"
spec:
  # <== 当kubernetes版本大于等于1.19时，只能用
  #     此方法来指定某ingress-controller配套ingressclass资源对象
  ingressClassName: nginx 

  # <== 配置规则及启下
  rules:
  - host: "k8s01-dashboard.qepyd.com"
    http:
      paths:
      - path: "/"
        pathType: "Prefix"
        backend:
          service: 
            name: "kubernetes-dashboard-web"
            port: 
              number: 8000
